--- a/OpenSocial/Gadget/Tutorial/Tutorial_05_Voting/voting.html
+++ b/OpenSocial/Gadget/Tutorial/Tutorial_05_Voting/voting.html
@@ -15,7 +15,7 @@
 
 <!-- Add some basic HTML structure to our gadget-->
 <div id="app">
-	<div id="header"><h2>OpenSocial Tutorial Tool</h2></div>
+	<div id="header"><h2>TEST Tool</h2></div>
 	<div id="body"></div>
 	<div id="footer"></div>
 </div>
